--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -7,7 +7,7 @@ h1#project_name, h1#project_meta {
 }
 #window {
   position: relative;
-  height: 200px;
+//  height: 200px;
 }
 div.project {
   overflow: hidden;
