--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,4 +1,4 @@
-<div id="map_canvas"></div>
+<div id="map_canvas">
 
 <div id="address">
   <span class="company">UrbanLites Ltd</spa>
@@ -8,6 +8,8 @@
   <span>M11 2NB</span>
   <span>+44 (0)161 402 3271</span>
   <span><%= mail_to "chris@urbanlites.com", "Email Us", encode: "hex" %></span>
+</div>
+
 </div>
 
 <div id="downloads">
