--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,25 +2,57 @@
 @import "boilerplate";
 @import "jquery.Jcrop";
 
-$gw-column: 60px; // Column Width
-$gw-gutter: 40px; // Gutter Width
+$column-width: 160px !default;
+$gutter-width: 10px !default;
+$columns: 5 !default;
 
-$blue: #2E3B78;
+@mixin grid($i) {
+  width: $column-width * $i + (($gutter-width * 2) * ($i - 1));
+  margin: 0 $gutter-width;
+  float: left;
+}
+
+span {
+  display: block;
+}
+
+$blue: #4a63ae;
+
+a, a:active, a:visited {
+  color: $blue;
+}
+
+.grid_1 {
+  @include grid(1);
+  height: 50px;
+}
 
 h1,h2,h3,h4,h5,h6 {
   margin: 0;
   padding: 0;
 }
+
 h5,h6 {
   font-size: 1.1em;
 }
+
 h6 {
   color: $blue;
 }
 
+#main {
+  padding-top: 10px;
+//  background: image-url('content_bg.jpg') top repeat-x;
+  @include linear-gradient(#0D101D, #000);
+}
+
 header {
-  padding: 40px inherit;
+  overflow: hidden;
   border-bottom: 1px solid $blue;
+  .container {
+    background: image-url('header_bg.jpg') top right no-repeat;
+    padding: 38px inherit;
+  }
 }
 
 #admin_bar {
@@ -32,24 +64,48 @@ header {
 footer {
   margin-top: 30px;
   font-size: .9em;
-  padding: 10px inherit 100px;
+  padding: 10px 0 80px 0;
   border-top: 1px solid $blue;
-  background: #181C29;
+//  background: #181C29;
+  @include linear-gradient(#222738, #121212);
+
   clear: both;
-  ul#social_buttons {
-    float: left;
-    width: grid-width(3);
+  #social_buttons {
+    @include grid(1);
+    ul{
+
     &, li {
       margin: 0;
       padding: 0;
       float: left;
       display: block;
     }
+
+    li {
+      overflow:hidden;
+      background-repeat: no-repeat;
+      background-image: image-url('sprites.png');
+      text-indent: -999px;
+      margin-right: 10px;
+      &.facebook {width:24px; height:24px; background-position: -2px -28px};
+      &.flickr {width:23px; height:24px; background-position: -28px -28px};
+      &.twitter {width:24px; height:24px; background-position: -2px -2px};
+      &.youtube {width:23px; height:24px; background-position: -28px -2px};
+
+      a {
+        display: block;
+        width: 100%;
+        height: 100%;
+      }
+    }
+    }
   }
   #address {
-    width: grid-width(8);
-    float: right;
+    @include grid(4);
     text-align: right;
+    span {
+      display: block;
+    }
   }
 }
 
@@ -57,6 +113,7 @@ body {
   background: #000;
   color: #FFF;
   font-size: 14px;
+  min-width: 940px;
 }
 
 a {
@@ -64,17 +121,19 @@ a {
 }
 
 #ident {
-  float: left;
-  width: grid-width(3);
+  cursor: pointer;
+  @include grid(2);
 }
 
 #contact_details {
-  float: right;
-  width: grid-width(4);
+  @include grid(3);
   text-align: right;
   #telephone_number {
     font-weight: bold;
     font-size: 1.7em;
+  }
+  span {
+    display: block;
   }
 }
 
@@ -83,17 +142,20 @@ a {
 }
 
 nav {
+  background: image-url('nav_bg.gif') center repeat-x;
   clear: both;
+  overflow: hidden;
+//  border-top: 1px solid black;
+  border-bottom: 1px solid black;
   ul,li {
     list-style: none;
   }
   li {
     float: left;
     display: block;
-    width: grid-width(2);
+    @include grid(1);
     a, a:active, a:visited {
-      padding: 10px 0;
-
+      padding: 7px 0;
       display: block;
       text-align: center;
       width: 100%;
@@ -110,8 +172,10 @@ a {
   text-decoration: none;
 }
 .container {
-  @extend .clearfix;
-  width: grid-width(9);     // returns 520px;
+  overflow: hidden;
+//  background: image-url('grid.png') top center repeat-y;
+  width: 900px;
+//  width: grid-width(5);     // returns 520px;
   margin: 0 auto;
 }
 
