--- a/app/assets/stylesheets/services.css.scss
+++ b/app/assets/stylesheets/services.css.scss
@@ -5,22 +5,34 @@ ul#services {
   overflow: hidden;
   clear: both;
   li {
-    border: 1px solid black;
-    display: block;
-    width: grid-width(2);
-    text-align: center;
-    height: 200px;
-    float: left;
+    @include grid(1);
+//    border: 1px solid black;
+//    display: block;
+//    width: grid-width(2);
+//    float: left;
 //    margin-right: 10px;
     overflow: hidden;
     position: relative;
-    .description {
+
+    background: image-url('services/lighting_design.jpg');
+    height: 460px;
+
+    .title, .description {
       position: absolute;
-      bottom: 0;
-      width: 100%;
+//      width: 100%;
+width: 140px;
       padding: 10px;
       background: rgba(0,0,0,0.7);
       color: #FFF;
+      font-size: 1.2em;
+      font-weight: bold;
+    }
+
+    .description {
+      font-weight: normal;
+      bottom: 0;
+      font-size: 1em;
+
     }
   }
 }
