--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,7 +1,7 @@
 <ul id="services">
 <% @services.each do |service| %>
   <li>
-    <%= service.name %>
+    <div class="title"><%= service.name %></div>
     <div class="description"><%= service.description %></div>
   </li>
 <% end %>
