--- a/app/assets/stylesheets/boilerplate.css.scss
+++ b/app/assets/stylesheets/boilerplate.css.scss
@@ -51,10 +51,10 @@ body { margin: 0; font-size: 1em; line-height: 1.4; }
    Links
    ========================================================================== */
 
-a { color: #00e; }
-a:visited { color: #551a8b; }
-a:hover { color: #06e; }
-a:focus { outline: thin dotted; }
+a { color: #FFF; }
+a:hover, a:visited { color: #C2DBFF;}
+//a:hover { color: #06e; }
+a:focus { color: #C2DBFF; outline: thin dotted; }
 
 /* Improve readability when focused and hovered in all browsers: h5bp.com/h */
 a:hover, a:active { outline: 0; }
