--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -48,12 +48,4 @@
   Our experience ranges from creating stunning corporate events and exhibitions, to lighting up entertainment events such as rock concerts, club and party nights, outdoor festivals and theatre.</p>
 </div>
 
-<div id="twitter">
-  <h5>Our latest tweet...</h5>
-  <div class="tweet">
-    <div class="tweet_body">‘<%= TwitterPost.first %>‘</div>
-    <div id="twitter_bird"></div>
-  </div>
-  <span>about <%= time_ago_in_words TwitterPost.first.posted_at %> ago</span>
-  <span><%= link_to "Follow us on Twitter", 'http://twitter.com/bitsushi' %></span>
-</div>
+<%= render 'application/twitter' %>
