--- a/app/assets/stylesheets/contact.css.scss
+++ b/app/assets/stylesheets/contact.css.scss
@@ -16,6 +16,8 @@
   height: 400px;
   @include grid(5);
   margin-bottom: 20px;
+//  border: 1px solid $blue;
+
   #map_canvas {
     width: 100%;
     height: 100%;
