--- a/app/assets/stylesheets/services.css.scss
+++ b/app/assets/stylesheets/services.css.scss
@@ -25,11 +25,13 @@ width: 140px;
       background: rgba(0,0,0,0.7);
       color: #FFF;
       font-size: 1.2em;
-      font-weight: bold;
+    }
+
+    .title {
+      @include bold;
     }
 
     .description {
-      font-weight: normal;
       bottom: 0;
       font-size: 1em;
 
