--- a/app/views/pages/our_ethos.html.erb
+++ b/app/views/pages/our_ethos.html.erb
@@ -1,3 +1,17 @@
+<div id="window_container">
+<div id="my-slideshow">
+<ul class="bjqs">
+  <li>
+    <div id="window" style="background: url(<%= image_path 'our_ethos/ethosbg.jpg' %>)">
+      <h1>Equipment kept to highest standard</h1>
+      <p>Being an environmentally conscious company we strive to be asenergy efficient as possible, whilst expecting the same from our suppliers.UrbanLites happily supports any initiative which focuses onreducing human-induced climate change.</p>
+    </div>
+  </li>
+</ul>
+</div>
+</div>
+
+<!--
 <ol id="our_ethos">
   <li>Equipment kept to highest standard</li>
   <li>We try harder and go further than our competitors</li>
@@ -7,3 +21,4 @@
   <li>No job is considered too small nor too large</li>
   <li>To be as eco-friendly as possible</li>
 </ol>
+-->
