project show page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -232,7 +232,7 @@ a {
   	}
   }
   .tweet_time {
-    padding: 5px 0;
+    padding: 5px 0 2px;
     a {
       text-decoration: none;
       color: #111;
