--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -1,24 +1,61 @@
-// Place all the styles related to the Projects controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-h1#project_name, h1#project_meta {
-  position: relative;
-  z-index: 10;
-}
-#window {
-  position: relative;
-//  height: 200px;
-}
-div.project {
-  overflow: hidden;
-}
+body#c-projects-a-show {
 
-ol.bjqs-markers li {
-  opacity: .3;
-  &:hover {
-    opacity: .6;
+  h1#project_name, h1#project_meta {
+    position: relative;
+    z-index: 10;
   }
-  &.active-marker {
-    opacity: 1;
+  #window {
+    position: relative;
+  //  height: 200px;
   }
+  div.project {
+    overflow: hidden;
+  }
+
+  ol.bjqs-markers li {
+    opacity: .3;
+    &:hover {
+      opacity: .6;
+    }
+    &.active-marker {
+      opacity: 1;
+    }
+  }
+
+  #project_detail {
+    @include grid(3);
+  }
+
+  #in_more_detail {
+    color: $blue;
+  }
+
+  #project_quotes {
+    @include italic;
+    @include grid(2);
+    ul,li {
+      margin: 0;
+      padding: 0;
+      list-style: none;
+    }
+    blockquote {
+      margin: 0;
+      padding: 0;
+    }
+    span.author {
+      color: $blue;
+    }
+  }
+
+  #previous_project {
+    @include grid(3);
+  }
+  #next_project {
+    text-align: right;
+    @include grid(2);
+  }
+  #my-slideshow {
+    clear: both;
+  }
+
 }
