--- a/app/assets/stylesheets/downloads.css.scss
+++ b/app/assets/stylesheets/downloads.css.scss
@@ -1,3 +1,27 @@
 // Place all the styles related to the Downloads controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.date_uploaded {
+  color: $blue;
+}
+
+h3 a {
+  color: #FFF;
+}
+
+li.download {
+  @include grid(1);
+  width: 200px;
+  cursor: pointer;
+  margin-bottom: 10px;
+
+  .inner {
+    border: 1px solid $blue;
+    padding: 10px;
+    height: 140px;
+  }
+}
+
+h1 {
+  @include grid(4);
+}
