--- a/app/views/pages/our_ethos.html.erb
+++ b/app/views/pages/our_ethos.html.erb
@@ -1,12 +1,16 @@
 <div id="window_container">
   <div id="my-slideshow">
     <ul class="bjqs">
+      <% Ethos.all.each do |ethos| %>
       <li>
         <div id="window" style="background: url(<%= image_path 'our_ethos/ethosbg.jpg' %>)">
-          <h1>Equipment kept to highest standard</h1>
-          <p>Being an environmentally conscious company we strive to be asenergy efficient as possible, whilst expecting the same from our suppliers.UrbanLites happily supports any initiative which focuses onreducing human-induced climate change.</p>
+          <div class="inner">
+          <h1><%= ethos.headline %></h1>
+          <%= ethos.description %>
+          </div>
         </div>
       </li>
+      <% end %>
     </ul>
   </div>
 </div>
