--- a/app/assets/stylesheets/downloads.css.scss
+++ b/app/assets/stylesheets/downloads.css.scss
@@ -1,6 +1,4 @@
-// Place all the styles related to the Downloads controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+body#c-downloads-a-index {
 .date_uploaded {
   color: $blue;
 }
@@ -24,4 +22,5 @@ li.download {
 
 h1 {
   @include grid(4);
+}
 }
