--- a/app/views/downloads/index.html.erb
+++ b/app/views/downloads/index.html.erb
@@ -7,7 +7,7 @@
     <div class="inner">
       <h3><%= link_to download.name, download.file.url %></h3>
       <span class="date_uploaded"><%= l(download.updated_at, format: :short) %></span>
-      <div><%= download.description %></div>
+      <!--<div><%= download.description %></div>-->
       <span><%= link_to('Edit', edit_admin_download_path(download), class: 'button')  if current_user.present? %></span>
     </div>
   </li>
