--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -17,7 +17,7 @@
     <li><%= link_to "Projects", admin_projects_path %></li>
     <li><%= link_to "Services", admin_services_path %></li>
     <li><%= link_to "Downloads", admin_downloads_path %></li>
-    <%#= link_to "Our Ethos", admin_projects_path %>
+    <li><%= link_to "Our Ethos", admin_ethoses_path %></li>
     <li><%= link_to "Activity", admin_posts_path %></li>
     <%#= link_to "Contact", admin_projects_path %>
     <li><%= link_to("Preview Site", root_path) %></li>
