--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,10 +60,10 @@
     <div class="container">
       <div id="social_buttons">
       <ul>
-        <li class="twitter"><%= link_to "Twitter", 'http://twitter.com/urbanlites' %></li>
-        <li class="facebook"><%= link_to "Facebook", 'http://facebook.com/urbanlites' %></li>
-        <li class="youtube"><%= link_to "YouTube", 'http://youtube.com/urbanlites' %></li>
-        <li class="flickr"><%= link_to "Flickr", 'http://flickr.com/urbanlites' %></li>
+        <li class="twitter"><%= link_to "Twitter", 'http://twitter.com/urbanlites', title: 'Twitter' %></li>
+        <li class="facebook"><%= link_to "Facebook", 'http://facebook.com/urbanlites', title: 'Facebook' %></li>
+        <li class="youtube"><%= link_to "YouTube", 'http://youtube.com/urbanlites', title: 'YouTube' %></li>
+        <li class="flickr"><%= link_to "Flickr", 'http://flickr.com/urbanlites', title: 'Flickr' %></li>
       </ul>
       </div>
 
