--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
 <ul class="bjqs">
   <% @projects.each do |project| %>
   <li>
-  <div id="window">
+  <div class="window">
     <h1><%= link_to project.name, project %></h1>
     <h2>Management Event 2012</h2>
     <div class="description">
