--- a/app/views/pages/our_ethos.html.erb
+++ b/app/views/pages/our_ethos.html.erb
@@ -4,9 +4,11 @@
       <% Ethos.all.each do |ethos| %>
       <li>
         <div class="window" style="background: url(<%= image_path 'our_ethos/ethosbg.jpg' %>)">
+          <div class="inner_container">
           <div class="inner">
           <h1><%= ethos.headline %></h1>
           <%= ethos.description %>
+          </div>
           </div>
         </div>
       </li>
