--- a/app/assets/stylesheets/our_ethos.css.scss
+++ b/app/assets/stylesheets/our_ethos.css.scss
@@ -6,6 +6,9 @@ body#c-pages-a-our_ethos {
   p {
     clear: both;
   }
+
+  .window {
+
   .inner {
     display:table;
     padding: 10px;
@@ -19,4 +22,5 @@ body#c-pages-a-our_ethos {
     display: table-cell;
     vertical-align:middle;
   }
+}
 }
