--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,4 +1,5 @@
 <div id="map">
+  <div class="inner">
   <div id="map_canvas"></div>
   <div id="map_address">
 
@@ -11,6 +12,7 @@
     <span>M11 2NB</span>
     <span class="tel">Tel. +44 (0)161 402 3271</span>
     <span>Email us at:<br/><%= mail_to "chris@urbanlites.com", "chris@urbanlites.com", encode: "hex", class: 'email_us' %></span>
+  </div>
   </div>
 </div>
 
