--- a/app/assets/stylesheets/contact.css.scss
+++ b/app/assets/stylesheets/contact.css.scss
@@ -11,23 +11,31 @@
 //}
 
 #map {
+  .inner {
+    border: 1px solid $blue;
+    height: 400px;
+    overflow: hidden;
+  }
   position: relative;
   display: block;
-  height: 400px;
+
   @include grid(5);
   margin-bottom: 20px;
-//  border: 1px solid $blue;
+  overflow: hidden;
+
 
   #map_canvas {
     width: 100%;
     height: 100%;
   }
   #map_address {
+//    float: right;
     position: absolute;
-    top: 0;
-    right: 0;
-    height: 100%;
+    top: 1px;
+    right: 1px;
+    height: 380px;
     padding: 10px;
+    background: #000;
     background: rgba(0,0,0,0.8);
     width: 180px;
   }
